FLY wire David/force-app/main/default/objects/CampaignMember/fields/Campaign_Member_Long_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Long_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Campaign Member Long ID</label>
    <type>Text</type>
</CustomField>