FLY wire David/force-app/main/default/objects/CampaignMember/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>Provides the Campaign Name</description>
    <formula>Campaign.Name</formula>
    <label>Campaign Name</label>
    <type>Text</type>
</CustomField>