FLY wire David/force-app/main/default/objects/CampaignMember/fields/First_Responded_Date2__c.field-meta.xml
<CustomField>
    <fullName>First_Responded_Date2__c</fullName>
    <description>For data load. We are not able to edit the standard First Responded Date field.</description>
    <label>First Responded Date2</label>
    <type>Date</type>
</CustomField>