FLY wire David/force-app/main/default/objects/CampaignMember/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>IF( 
NOT(ISBLANK( ContactId )), 
Text(Contact.Account.Account_Industry__c),
TEXT(Lead.Lead_Industry__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>