FLY wire David/force-app/main/default/objects/CampaignMember/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <description>Shows Contact Person Status if Contact Record. If Lead Record, shows Lead Person Status. Updated with new formula 8/30/2023 so that status can be seen on standard campaign w campaign member report, request from Brette.</description>
    <formula>IF( NOT(ISNULL(ContactId)) , TEXT( Contact.Contact_Status__c ), &apos;&apos;) + 
IF( NOT(ISNULL(LeadId)) , TEXT(Lead.Lead_Person_Status__c  ), &apos;&apos;)</formula>
    <inlineHelpText>Shows Contact Person Status if Contact Record. If Lead Record, shows Lead Person Status.</inlineHelpText>
    <label>Person Status</label>
    <type>Text</type>
</CustomField>